--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             Design
           </p>
 
-          <a href="#"
+          <a href="https://wa.link/unmmek"
             class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg">Hubungi
             Saya</a>
         </div>
@@ -140,7 +140,7 @@
           <div class="flex items-center">
 
             <!-- WA -->
-            <a href="#" target="_blank"
+            <a href="https://wa.link/unmmek" target="_blank"
               class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white">
               <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <title>WhatsApp</title>
@@ -148,7 +148,7 @@
                   d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z" />
               </svg>
             </a>
-            <a href="#" target="_blank"
+            <a href="https://www.instagram.com/rizkydwidhrmwn" target="_blank"
               class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white">
               <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <title>Instagram</title>
@@ -157,7 +157,7 @@
               </svg>
             </a>
             <!-- facebook -->
-            <a href="#" target="_blank"
+            <a href="https://www.facebook.com/share/1KFhLwgkSr/" target="_blank"
               class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white">
               <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <title>Facebook</title>
@@ -166,7 +166,8 @@
               </svg>
             </a>
             <!-- LinkIn -->
-            <a href="#" target="_blank"
+            <a href="https://www.linkedin.com/in/rizky-dwi-dharmawan-814327180?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+              target="_blank"
               class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white">
               <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <title>LinkedIn</title>
@@ -383,7 +384,7 @@
     <div class="container">
       <div class="flex flex-wrap">
         <div class="mb-12 w-full px-4 font-medium text-slate-300 md:w-1/3">
-          <a href="#" target="_blank"
+          <a href="https://wa.link/unmmek" target="_blank"
             class="mb-3 mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white">
             <svg role="img" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <title>WhatsApp</title>
@@ -400,7 +401,7 @@
         <div class="mb-5 flex items-center justify-center">
 
           <!-- Instagram -->
-          <a href="https://instagram.com/sandhikagalih" target="_blank"
+          <a href="https://www.instagram.com/rizkydwidhrmwn" target="_blank"
             class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white">
             <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <title>Instagram</title>
@@ -409,7 +410,7 @@
             </svg>
           </a>
           <!-- Facebook -->
-          <a href="https://instagram.com/sandhikagalih" target="_blank"
+          <a href="https://www.facebook.com/share/1KFhLwgkSr/" target="_blank"
             class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white">
             <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <title>Facebook</title>
@@ -419,7 +420,8 @@
           </a>
 
           <!-- LinkedIn -->
-          <a href="https://linkedin.com/in/sandhikagalih" target="_blank"
+          <a href="https://www.linkedin.com/in/rizky-dwi-dharmawan-814327180?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+            target="_blank"
             class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white">
             <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <title>LinkedIn</title>
