--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <div class="flex flex-wrap">
         <div class="mb-10 w-full px-4 lg:w-1/2">
           <h4 class="mb-3 text-lg font-bold uppercase text-primary dark:text-blue-400">Tentang Saya</h4>
-          <h2 class="mb-5 max-w-md text-3xl font-bold text-dark dark:text-white lg:text-4xl">Freelancer</h2>
+          <h2 class="mb-5 max-w-md text-3xl font-bold text-dark dark:text-white lg:text-4xl">Yuk, Sini Buat Aplikasi</h2>
           <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">Saya bekerja di salah satu perusahaan
             industri pertanian dan juga saya adalah freelancer khususnya untuk <span
               class="font-bold text-slate-950 dark:text-white">Web
