--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
     <div class="container">
       <div class="flex flex-wrap">
         <div class="mb-12 w-full px-4 font-medium text-slate-300 md:w-1/3">
-          <a href="https://wa.link/unmmek" target="_blank"
+          <a href="https://wa.me/6283853536050?text=Halo+kak+Rizky%2C+saya+butuh+bantuan" target="_blank"
             class="mb-3 mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white">
             <svg role="img" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <title>WhatsApp</title>
